--- a/02/index.html
+++ b/02/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <div class="card-container">
 
   <h1>HTML 30-day challenge - Dia 2</h1>
 
   <p>¡Hola! Soy Guillermo, técnico en informática en formación al que le encanta el frontend.
-   Estoy resolviendo <a href="https://lenguajehtml.com/challenge/" target="_blank">una lista de retos creados por ManzDEV</a> para dar
+   Estoy resolviendo <a href="https://lenguajehtml.com/challenge/">una lista de retos creados por ManzDEV</a> para dar
    mis primeros pasos en el desarrollo web.</p> 
   
   <p>Estos retos los ando resolviendo en mi <a href="https://www.facebook.com/cecyt12oficial/?locale=es_LA">Servicio S.</a>, al face del poli para estar
