--- a/07/index.html
+++ b/07/index.html
@@ -2,43 +2,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content=
-    "width=device-width, initial-scale=1.0">
-    <title>HTML 30-Days challenge - Día 6</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML 30-Days challenge - Día 7</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <details open name="dia-6">
-        <summary>Ejemplo 1</summary>
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, dolor fuga 
-      nisi atque sequi assumenda saepe rem natus explicabo eum, tenetur veritatis, 
-      aliquid illo quaerat quia dolorum! Minima, praesentium corrupti!</p>
-    </details>
-    
-    <details name="dia-6">
-        <summary>Ejemplo 2</summary>
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, dolor fuga 
-      nisi atque sequi assumenda saepe rem natus explicabo eum, tenetur veritatis, 
-      aliquid illo quaerat quia dolorum! Minima, praesentium corrupti!</p>
-    </details>
-
-    <details name="dia-6">
-        <summary>Ejemplo 3</summary>
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, dolor fuga 
-      nisi atque sequi assumenda saepe rem natus explicabo eum, tenetur veritatis, 
-      aliquid illo quaerat quia dolorum! Minima, praesentium corrupti!</p>
-    </details>
-
-    <details name="dia-6">
-        <summary>Ejemplo 4</summary>
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, dolor fuga 
-      nisi atque sequi assumenda saepe rem natus explicabo eum, tenetur veritatis, 
-      aliquid illo quaerat quia dolorum! Minima, praesentium corrupti!</p>
-    </details>
+    <picture>
+      <source srcset="../assets/MConverter.eu_challenge-lenguajehtml.jxl" type="jxl">
+      <source srcset="../assets/challenge-lenguajehtml.avif" type="avif">
+      <img src="./assets/challenge-lenguajehtml.jpg" alt="HTML 30-Days challenge">
+    </picture>
 </body>
 </html>
