--- a/assets/index.html
+++ b/assets/index.html
@@ -10,9 +10,11 @@
     <h2>Validaciones</h2>
     <h3>Validación día 2</h3>
     <img src="../assets/validacion.dia-2.png" alt="Validación del día 2">
-    <h3>Validación día 2</h3>
+    <h3>Validación día 3</h3>
     <img src="../assets/validacion.dia-3.png" alt="Validación del día 3">
-    <h3>Validación día 2</h3>
+    <h3>Validación día 6</h3>
     <img src="../assets/validacion.dia-6.png" alt="Validación del día 6">
+    <h3>Validación día 7</h3>
+    <img src="../assets/validacion.dia-7.png" alt="Validación del día 7">
 </body>
 </html>
