--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
     <h1>HTML 30-Days challenge - Dias</h1>
     <h2>Validaciones</h2>
     <h3>Validación día 2</h3>
-    <img src="../assets/validacion.dia-2.png" alt="Validación del día 2">
+    <img src="./assets/validacion.dia-2.png" alt="Validación del día 2">
     <h3>Validación día 3</h3>
     <img src="../assets/validacion.dia-3.png" alt="Validación del día 3">
     <h3>Validación día 6</h3>
