--- a/assets/index.html
+++ b/assets/index.html
@@ -36,10 +36,10 @@
     <img src="../assets/validacion.dia-14.png" alt="Validación del día 14">
 
     <h3>Validación día 15</h3>
-    <img src="../assets/validacion.dia-15.png" alt="Validación del día 15">
+    <img src="../assets/validations/validacion.dia-15.png" alt="Validación del día 15">
 
     <h3>Validación día 16</h3>
-    <img src="../assets/validacion.dia-16.png" alt="Validación del día 16">
+    <img src="../assets/validations/validacion.dia-16.png" alt="Validación del día 16">
 
     <h3>Validación día 17</h3>
     <img src="../assets/validacion.dia-17.png" alt="Validación del día 17">
