--- a/assets/index.html
+++ b/assets/index.html
@@ -42,7 +42,7 @@
     <img src="../assets/validations/validacion.dia-16.png" alt="Validación del día 16">
 
     <h3>Validación día 17</h3>
-    <img src="../assets/validacion.dia-17.png" alt="Validación del día 17">
+    <img src="../assets/validations/validacion.dia-17.png" alt="Validación del día 17">
 
     <h3>Validación día 18</h3>
     <img src="../assets/validacion.dia-18.png" alt="Validación del día 18">
